Re-enable eXist 1.4.1 functionality